--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
         "name": "Leandro Schultze"
     },
     "scripts": {
-        "start": "node server/app.js"
+        "start": "node server/app.js",
+        "lint": "eslint ."
     },
-    "license": "MIT"
+    "license": "MIT",
+    "devDependencies": {
+        "eslint": "^9.17.0",
+        "globals": "^15.14.0"
+    }
 }
