--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 	"devDependencies": {
 		"eslint": "^9.17.0",
 		"globals": "^15.14.0",
-		"prettier": "^3.4.2"
+		"prettier": "^3.4.2",
+		"tailwindcss": "^3.4.17"
 	},
 	"dependencies": {
 		"dotenv": "^16.4.7",
